--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
 				<div class="tab">
 	                <button onclick="showHideDiv('divPay')" class="tablinks btn btn--white btn--animated">Payback Period</button>
 									<button onclick="showHideDiv2('divNpv')" class="tablinks btn2 btn2--white btn2--animated">NPV</button>
-									<button onclick="showHideDiv4('divDep')" class="tablinks btn4 btn4--white btn4--animated">Depreciation</button>
-									<button onclick="showHideDiv3('divChe')" class="tablinks btn3 btn3--white btn3--animated">Checklist</button>
-									<a href="project-screening-matrix.html" class="tablinks btn3 btn3--white btn3--animated">Screening Matrix</a>
+									<button onclick="showHideDiv4('divDep')" class="tablinks btn4 btn4--white btn3--animated">Depreciation</button>
+									<button onclick="showHideDiv3('divChe')" class="tablinks btn4 btn4--white btn4--animated">Checklist</button>
+									<a href="project-screening-matrix.html" class="tablinks btnSec-5 btn4--white btn4--animated">Screening Matrix</a>
             	</div>
 		    </div>        
         </header>
