Screening matrix working already

--- a/project-screening-matrix.html
+++ b/project-screening-matrix.html
@@ -274,6 +274,12 @@
                             <td><input type="number" step="any" id="int_innov_val" required></td>
                             <td><input type="text" step="any" id="int_innov_result" required></td>
                         </tr>
+                        <tr>
+                            <td>Total</td>
+                            <td></td>
+                            <td>Weighted Total</td>
+                            <td id="SECONDARY_TOTAL_W"></td>
+                        </tr> 
                     </tbody>
                 </table>
                 <hr>
@@ -392,6 +398,12 @@
                             <td><input type="number" step="any" id="own_intelectual_val" required></td>
                             <td><input type="text" step="any" id="own_intelectual_result" required></td>
                         </tr>
+                        <tr>
+                            <td>Total</td>
+                            <td></td>
+                            <td>Weighted Total</td>
+                            <td id="OTHER_TOTAL_W"></td>
+                        </tr> 
                     </tbody>
                 </table>
                 <hr>
@@ -421,6 +433,7 @@
                         </tr>
                     </tbody>
                 </table>
+                <div id="resultssss"></div>
             </div>
         </section>
    </body>
